overflow x okay y still issue

--- a/travel-app/style.css
+++ b/travel-app/style.css
@@ -1,5 +1,6 @@
 ::-webkit-scrollbar {
   width: 3px;
+  height: 2px;
   /*  display: none; */
 }
 
@@ -106,14 +107,16 @@ body {
   display: flex;
   gap: 20px;
   flex-direction: column;
-  padding: 15px;
-  height: 100%;
+  padding: 15px 0px;
+  flex: 1;
+  overflow: hidden;
 }
 
 .section-head {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
+  padding: 0px 15px;
 }
 
 .section-title {
@@ -128,10 +131,13 @@ body {
 .pop-cards {
   display: flex;
   gap: 20px;
-  /*   overflow-y: hidden;
-  overflow-x: auto; */
-  padding: 5px 0px;
-  /*   overflow: hidden; */
+  overflow-x: auto;
+  overflow-y: hidden;
+
+  padding: 5px 15px;
+  /* z-index: 1; */
+  /* height: 250px; */
+  flex-shrink: 0;
   z-index: 1;
 }
 
@@ -211,8 +217,13 @@ body {
 }
 
 .menu-con {
-  /*  border: 1px solid #000; */
-  height: 100%;
+  height: 58%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  overflow: auto;
+  padding: 0px 15px;
+  z-index: 0;
 }
 
 .menu-card {
@@ -318,4 +329,14 @@ body {
   stroke: rgb(141, 140, 140);
   width: 20px;
   height: 20px;
+}
+
+.bottom-line {
+  height: 6px;
+  width: 150px;
+  border-radius: 20px;
+  background-color: rgb(37, 37, 37);
+  align-self: center;
+  position: absolute;
+  bottom: 10px;
 }
